Update from local workspace
