# routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\DocumentationController;
+use App\Http\Controllers\Api\GraphQLController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
@@ -9,4 +10,6 @@ Route::get('/', function () {
 
 Route::get('/api/documentation', [DocumentationController::class, 'swagger']);
 Route::get('/api/openapi.json', [DocumentationController::class, 'openapi']);
+Route::get('/graphql', [DocumentationController::class, 'graphqlPlayground']);
 Route::get('/graphql-playground', [DocumentationController::class, 'graphqlPlayground']);
+Route::post('/graphql', GraphQLController::class)->middleware('iae.key');
